--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="cupcake">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./images/logo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/logo1.jpg" type="image/x-icon">
     <title>Fruit Blust</title>
     <!-- tailwind & daisyui -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.5.0/dist/full.css" rel="stylesheet" type="text/css" />
@@ -51,6 +51,72 @@
             </div>
             </div>
         </nav>
+        <!-- 1st slide  -->
+        <div class="carousel w-full">
+            <div id="slide1" class="carousel-item relative w-full">
+                <img src="./images/banner1.png" class="w-full brightness-50" />
+                <div
+                    class="absolute items-center flex justify-around transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide4" class="btn btn-circle">❮</a>
+                    <div class="text-center text-white  lg:space-y-3">
+                        <h1 class=" text-lg md:text-2xl   lg:text-6xl font-semibold">A Tropical Delight, Bursting <br>
+                            With Flavor</h1>
+                        <p class="font-bold">We Supply High Quality Organic Products. <br> Sweet, juicy, and packed with
+                            goodness</p>
+                        <button class="btn btn-active rounded-md border-0 text-white bg-[#F85559]">Purchase Now</button>
+                    </div>
+                    <a href="#slide2" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+            <!-- 2nd slide  -->
+            <div id="slide2" class="carousel-item relative w-full">
+                <img src="./images/banner2.png" class="w-full brightness-50" />
+                <div
+                    class="absolute items-center flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide1" class="btn btn-circle">❮</a>
+                    <div class="text-center text-white  lg:space-y-3">
+                        <h1 class=" text-lg md:text-2xl   lg:text-6xl font-semibold">A Tropical Delight, Bursting <br>
+                            With Flavor</h1>
+                        <p class="font-bold">We Supply High Quality Organic Products. <br> Sweet, juicy, and packed with
+                            goodness</p>
+                        <button class="btn btn-active rounded-md border-0 text-white bg-[#F85559]">Purchase Now</button>
+                    </div>
+                    <a href="#slide3" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+            <!-- 3rd slide  -->
+            <div id="slide3" class="carousel-item relative w-full">
+                <img src="./images/banner3.png" class="w-full brightness-50" />
+                <div
+                    class="absolute items-center flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide2" class="btn btn-circle">❮</a>
+                    <div class="text-center text-white  lg:space-y-3">
+                        <h1 class=" text-lg md:text-2xl   lg:text-6xl font-semibold">A Tropical Delight, Bursting <br>
+                            With Flavor</h1>
+                        <p class="font-bold">We Supply High Quality Organic Products. <br> Sweet, juicy, and packed with
+                            goodness</p>
+                        <button class="btn btn-active rounded-md border-0 text-white bg-[#F85559]">Purchase Now</button>
+                    </div>
+                    <a href="#slide4" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+            <!-- 4th slide  -->
+            <div id="slide4" class="carousel-item relative w-full">
+                <img src="./images/banner4.png" class="w-full brightness-50" />
+                <div
+                    class="absolute items-center flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide3" class="btn btn-circle">❮</a>
+                    <div class="text-center text-white  lg:space-y-3">
+                        <h1 class=" text-lg md:text-2xl   lg:text-6xl font-semibold">A Tropical Delight, Bursting <br>
+                            With Flavor</h1>
+                        <p class="font-bold">We Supply High Quality Organic Products. <br> Sweet, juicy, and packed with
+                            goodness</p>
+                        <button class="btn btn-active rounded-md border-0 text-white bg-[#F85559]">Purchase Now</button>
+                    </div>
+                    <a href="#slide1" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+        </div>
     </header>
     <main>
 
