--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body class="garamond max-w-screen-xl mx-auto px-8 md:px-16 lg:px-24">
 
-    <header>
+    <header class="mb-14">
         <nav class="my-9 ">
             <div
                 class="navbar flex justify-between md:justify-around lg:justify-around md:text-white  lg:text-white p-4 rounded-full  bg-transparent md:bg-[#F85559] lg:bg-[#F85559]">
@@ -61,8 +61,11 @@
                     <div class="text-center text-white  lg:space-y-3">
                         <h1 class=" text-lg md:text-2xl   lg:text-6xl font-semibold">A Tropical Delight, Bursting <br>
                             With Flavor</h1>
-                        <p class="font-bold">We Supply High Quality Organic Products. <br> Sweet, juicy, and packed with
-                            goodness</p>
+                        <p class="font-bold">We Supply High Quality Organic Products.
+                            <br> Sweet, juicy,
+                            and packed with
+                            goodness
+                        </p>
                         <button class="btn btn-active rounded-md border-0 text-white bg-[#F85559]">Purchase Now</button>
                     </div>
                     <a href="#slide2" class="btn btn-circle">❯</a>
@@ -115,6 +118,29 @@
                     </div>
                     <a href="#slide1" class="btn btn-circle">❯</a>
                 </div>
+            </div>
+        </div>
+        <div
+            class="hidden bg-white shadow-lg text-center lg:flex justify-around items-center relative w-3/4 mx-auto -mt-16 rounded-md p-4">
+            <div>
+                <img src="./images/fruit1.png" alt="">
+                <p>Berries</p>
+            </div>
+            <div>
+                <img src="./images/fruit2.png" alt="">
+                <p>Maltas</p>
+            </div>
+            <div>
+                <img src="./images/fruit3.png" alt="">
+                <p>Mangoes</p>
+            </div>
+            <div>
+                <img src="./images/fruit4.png" alt="">
+                <p>Strawberries</p>
+            </div>
+            <div>
+                <img src="./images/fruit5.png" alt="">
+                <p>Pomegranates</p>
             </div>
         </div>
     </header>
