--- a/index.html
+++ b/index.html
@@ -59,14 +59,16 @@
                     class="absolute items-center flex justify-around transform -translate-y-1/2 left-5 right-5 top-1/2">
                     <a href="#slide4" class="btn btn-circle">❮</a>
                     <div class="text-center text-white  lg:space-y-3">
-                        <h1 class=" text-lg md:text-2xl   lg:text-6xl font-semibold">A Tropical Delight, Bursting <br>
+                        <h1 class=" text-xs md:text-2xl   lg:text-6xl font-semibold">A Tropical Delight, Bursting <br>
                             With Flavor</h1>
-                        <p class="font-bold">We Supply High Quality Organic Products.
+                        <p class="lg:font-bold">We Supply High Quality Organic Products.
                             <br> Sweet, juicy,
                             and packed with
                             goodness
                         </p>
-                        <button class="btn btn-active rounded-md border-0 text-white bg-[#F85559]">Purchase Now</button>
+                        <button
+                            class="btn btn-xs sm:btn-sm md:btn-md lg:btn-md rounded-md border-0 text-white bg-[#F85559]">Purchase
+                            Now</button>
                     </div>
                     <a href="#slide2" class="btn btn-circle">❯</a>
                 </div>
@@ -78,11 +80,13 @@
                     class="absolute items-center flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                     <a href="#slide1" class="btn btn-circle">❮</a>
                     <div class="text-center text-white  lg:space-y-3">
-                        <h1 class=" text-lg md:text-2xl   lg:text-6xl font-semibold">A Tropical Delight, Bursting <br>
+                        <h1 class=" text-xs md:text-2xl   lg:text-6xl font-semibold">A Tropical Delight, Bursting <br>
                             With Flavor</h1>
                         <p class="font-bold">We Supply High Quality Organic Products. <br> Sweet, juicy, and packed with
                             goodness</p>
-                        <button class="btn btn-active rounded-md border-0 text-white bg-[#F85559]">Purchase Now</button>
+                        <button
+                            class="btn btn-xs sm:btn-sm md:btn-md lg:btn-md rounded-md border-0 text-white bg-[#F85559]">Purchase
+                            Now</button>
                     </div>
                     <a href="#slide3" class="btn btn-circle">❯</a>
                 </div>
@@ -94,11 +98,13 @@
                     class="absolute items-center flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                     <a href="#slide2" class="btn btn-circle">❮</a>
                     <div class="text-center text-white  lg:space-y-3">
-                        <h1 class=" text-lg md:text-2xl   lg:text-6xl font-semibold">A Tropical Delight, Bursting <br>
+                        <h1 class=" text-xs md:text-2xl   lg:text-6xl font-semibold">A Tropical Delight, Bursting <br>
                             With Flavor</h1>
                         <p class="font-bold">We Supply High Quality Organic Products. <br> Sweet, juicy, and packed with
                             goodness</p>
-                        <button class="btn btn-active rounded-md border-0 text-white bg-[#F85559]">Purchase Now</button>
+                        <button
+                            class="btn btn-xs sm:btn-sm md:btn-md lg:btn-md rounded-md border-0 text-white bg-[#F85559]">Purchase
+                            Now</button>
                     </div>
                     <a href="#slide4" class="btn btn-circle">❯</a>
                 </div>
@@ -110,11 +116,13 @@
                     class="absolute items-center flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                     <a href="#slide3" class="btn btn-circle">❮</a>
                     <div class="text-center text-white  lg:space-y-3">
-                        <h1 class=" text-lg md:text-2xl   lg:text-6xl font-semibold">A Tropical Delight, Bursting <br>
+                        <h1 class=" text-xs md:text-2xl   lg:text-6xl font-semibold">A Tropical Delight, Bursting <br>
                             With Flavor</h1>
                         <p class="font-bold">We Supply High Quality Organic Products. <br> Sweet, juicy, and packed with
                             goodness</p>
-                        <button class="btn btn-active rounded-md border-0 text-white bg-[#F85559]">Purchase Now</button>
+                        <button
+                            class="btn btn-xs sm:btn-sm md:btn-md lg:btn-md rounded-md border-0 text-white bg-[#F85559]">Purchase
+                            Now</button>
                     </div>
                     <a href="#slide1" class="btn btn-circle">❯</a>
                 </div>
@@ -145,7 +153,233 @@
         </div>
     </header>
     <main>
+        <!-- deal of the day section  -->
+        <section class="flex flex-col md:flex-col lg:flex-row my-10 gap-3    justify-center ">
+            <div class="flex-1 text-center md:text-center lg:text-left">
+                <h1 class="text-3xl font-bold">Deal of the day</h1>
+                <p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical
+                    Latin literature from 45 BC, making it over 2000 years old.</p>
+            </div>
+            <div class="flex-1 ">
+                <div class="flex justify-center text-center gap-5">
+                    <div>
+                        <h1 class="text-3xl font-bold">29 <i class="fa-solid fa-ellipsis-vertical text-sm ml-3"></i>
+                        </h1>
+                        <p>Days</p>
 
+                    </div>
+                    <div>
+                        <h1 class="text-3xl font-bold">15 <i class="fa-solid fa-ellipsis-vertical text-sm ml-3"></i>
+                        </h1>
+                        <p>Hours</p>
+
+                    </div>
+                    <div>
+                        <h1 class="text-3xl font-bold">30 <i class="fa-solid fa-ellipsis-vertical text-sm ml-3"></i>
+                        </h1>
+                        <p>Minutes</p>
+
+                    </div>
+                    <div>
+                        <h1 class="text-3xl font-bold">48</h1>
+                        <p>Seconds</p>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- card section  -->
+        <section class="my-14 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-3">
+            <!-- 1st card  -->
+            <div>
+                <div class="card  bg-base-100 border rounded-md">
+                    <figure class="px-10 pt-10">
+                        <img src="./images/fruit6.png" alt="" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title pb-3 border-b-2">12.90$ - 18.85$</h2>
+                        <small class="text-gray-500">Apples</small>
+                        <div class="card-actions">
+                            <div class="rating mx-auto">
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559] " checked />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559] " />
+                            </div>
+                        </div>
+                        <!-- modal -->
+                        <div>
+                            <h1 class="text-[#F85559] cursor-pointer" onclick="my_modal_1.showModal()">Details</h1>
+                            <dialog id="my_modal_1" class="modal">
+                                <form method="dialog" class="modal-box">
+                                    <img class="mx-auto" src="./images/fruit6.png" alt="" />
+                                    <h3 class="font-bold text-lg">Apples</h3>
+                                    <p class="py-4">Stay cool with refreshing watermelon <br> Small but mighty, packed
+                                        with antioxidants </p>
+                                    <div class="rating mx-auto">
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559] "
+                                            checked />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559] " />
+                                    </div>
+                                    <div class="modal-action justify-center">
+                                        <button
+                                            class="btn bg-white text-[#F85559] rounded-md border-[#F85559]">Close</button>
+                                        <button class="btn  bg-[#F85559] text-white rounded-md ">Buy
+                                            Now</button>
+                                    </div>
+                                </form>
+                            </dialog>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- 2nd card  -->
+            <div>
+                <div class="card  bg-base-100 border rounded-md">
+                    <figure class="px-10 pt-10">
+                        <img src="./images/fruit7.png" alt="" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title pb-3 border-b-2">12.90$ - 18.85$</h2>
+                        <small class="text-gray-500">Peaches</small>
+                        <div class="card-actions">
+                            <div class="rating mx-auto">
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559] " checked />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559] " />
+                            </div>
+                        </div>
+                        <!-- modal -->
+                        <div>
+                            <h1 class="text-[#F85559] cursor-pointer" onclick="my_modal_2.showModal()">Details</h1>
+                            <dialog id="my_modal_2" class="modal">
+                                <form method="dialog" class="modal-box">
+                                    <img class="mx-auto" src="./images/fruit7.png" alt="" />
+                                    <h3 class="font-bold text-lg">Peaches</h3>
+                                    <p class="py-4">Stay cool with refreshing watermelon <br> Small but mighty, packed
+                                        with antioxidants </p>
+                                    <div class="rating mx-auto">
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559] "
+                                            checked />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559] " />
+                                    </div>
+                                    <div class="modal-action justify-center">
+                                        <button
+                                            class="btn bg-white text-[#F85559] rounded-md border-[#F85559]">Close</button>
+                                        <button class="btn  bg-[#F85559] text-white rounded-md ">Buy
+                                            Now</button>
+                                    </div>
+                                </form>
+                            </dialog>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- 3rd card  -->
+            <div>
+                <div class="card  bg-base-100 border rounded-md">
+                    <figure class="px-10 pt-10">
+                        <img src="./images/fruit8.png" alt="" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title pb-3 border-b-2">12.90$ - 18.85$</h2>
+                        <small class="text-gray-500">Dragon Fruits</small>
+                        <div class="card-actions">
+                            <div class="rating mx-auto">
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559] " checked />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559] " />
+                            </div>
+                        </div>
+                        <!-- modal -->
+                        <div>
+                            <h1 class="text-[#F85559] cursor-pointer" onclick="my_modal_3.showModal()">Details</h1>
+                            <dialog id="my_modal_3" class="modal">
+                                <form method="dialog" class="modal-box">
+                                    <img class="mx-auto" src="./images/fruit8.png" alt="" />
+                                    <h3 class="font-bold text-lg">Dragon Fruits</h3>
+                                    <p class="py-4">Stay cool with refreshing watermelon <br> Small but mighty, packed
+                                        with antioxidants </p>
+                                    <div class="rating mx-auto">
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559] "
+                                            checked />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559] " />
+                                    </div>
+                                    <div class="modal-action justify-center">
+                                        <button
+                                            class="btn bg-white text-[#F85559] rounded-md border-[#F85559]">Close</button>
+                                        <button class="btn  bg-[#F85559] text-white rounded-md ">Buy
+                                            Now</button>
+                                    </div>
+                                </form>
+                            </dialog>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- 4th card -->
+            <div>
+                <div class="card  bg-base-100 border rounded-md">
+                    <figure class="px-10 pt-10">
+                        <img src="./images/fruit9.png" alt="" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title pb-3 border-b-2">12.90$ - 18.85$</h2>
+                        <small class="text-gray-500">Bananas</small>
+                        <div class="card-actions">
+                            <div class="rating mx-auto">
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559] " checked />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559] " />
+                            </div>
+                        </div>
+                        <!-- modal -->
+                        <div>
+                            <h1 class="text-[#F85559] cursor-pointer" onclick="my_modal_4.showModal()">Details</h1>
+                            <dialog id="my_modal_4" class="modal">
+                                <form method="dialog" class="modal-box">
+                                    <img class="mx-auto" src="./images/fruit9.png" alt="" />
+                                    <h3 class="font-bold text-lg">Bananas</h3>
+                                    <p class="py-4">Stay cool with refreshing watermelon <br> Small but mighty, packed
+                                        with antioxidants </p>
+                                    <div class="rating mx-auto">
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559] "
+                                            checked />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559] " />
+                                    </div>
+                                    <div class="modal-action justify-center">
+                                        <button
+                                            class="btn bg-white text-[#F85559] rounded-md border-[#F85559]">Close</button>
+                                        <button class="btn  bg-[#F85559] text-white rounded-md ">Buy
+                                            Now</button>
+                                    </div>
+                                </form>
+                            </dialog>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
     </main>
     <footer>
 
