new section added

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="cupcake">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./images/logo1.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/favicon.jpg" type="image/x-icon">
     <title>Fruit Blust</title>
     <!-- tailwind & daisyui -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.5.0/dist/full.css" rel="stylesheet" type="text/css" />
@@ -189,7 +189,7 @@
             </div>
         </section>
         <!-- card section  -->
-        <section class="my-14 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-3">
+        <section class="my-14 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
             <!-- 1st card  -->
             <div>
                 <div class="card  bg-base-100 border rounded-md">
@@ -203,9 +203,9 @@
                             <div class="rating mx-auto">
                                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
                                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559] " checked />
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559] " />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#eebabb]" />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#eebabb]" />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#eebabb] " />
                             </div>
                         </div>
                         <!-- modal -->
@@ -250,9 +250,9 @@
                             <div class="rating mx-auto">
                                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
                                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559] " checked />
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559] " />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#eebabb]" />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#eebabb]" />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#eebabb] " />
                             </div>
                         </div>
                         <!-- modal -->
@@ -297,9 +297,9 @@
                             <div class="rating mx-auto">
                                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
                                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559] " checked />
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
-                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559] " />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#eebabb]" />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#eebabb]" />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#eebabb] " />
                             </div>
                         </div>
                         <!-- modal -->
@@ -378,7 +378,75 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <div class=" justify-center text-center mx-auto">
+            <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-[#F85559] text-white rounded-md ">Shop
+                Now</button>
+        </div>
+        <!-- team members section  -->
+        <section class="my-10">
+            <div class="hero min-h-screen" style="background-image: url(./images/banner1.png);">
+                <div class="hero-overlay brightness-50"></div>
+                <div class="hero-content text-center text-white">
+                    <div class="max-w-md">
+                        <h1 class="mb-5 text-5xl font-bold">Meet The Team Section</h1>
+                        <p class="mb-5">We Supply High Quality Organic Products.
+                            Sweet, juicy, and packed with goodness</p>
+                        <!-- team members  -->
+                        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 ">
+                            <!-- 1st grid  -->
+                            <div class="mx-auto">
+                                <img src="./images/member1.png" alt="">
+                                <h1 class="mt-2">Awlad Hossain</h1>
+                                <small>Fruits Expert</small>
+                                <div class=" mt-2">
+                                    <i class="fa-brands fa-facebook-f bg-[#F85559] rounded-full p-2"></i>
+                                    <i class="fa-brands fa-twitter bg-[#F85559] rounded-full p-2"></i>
+                                    <i class="fa-brands fa-linkedin-in bg-[#F85559] rounded-full p-2"></i>
+                                </div>
+                            </div>
+                            <!-- 2nd grid  -->
+                            <div class="mx-auto">
+                                <img src="./images/member2.png" alt="">
+                                <h1 class="mt-2">Safia Khan</h1>
+                                <small>Fruits Expert</small>
+                                <div class=" mt-2">
+                                    <i class="fa-brands fa-facebook-f bg-[#F85559] rounded-full p-2"></i>
+                                    <i class="fa-brands fa-twitter bg-[#F85559] rounded-full p-2"></i>
+                                    <i class="fa-brands fa-linkedin-in bg-[#F85559] rounded-full p-2"></i>
+                                </div>
+                            </div>
+                            <!-- 3rd grid  -->
+                            <div class="mx-auto">
+                                <img src="./images/member3.png" alt="">
+                                <h1 class="mt-2">Rokib Hossain</h1>
+                                <small>Fruits Expert</small>
+                                <div class=" mt-2">
+                                    <i class="fa-brands fa-facebook-f bg-[#F85559] rounded-full p-2"></i>
+                                    <i class="fa-brands fa-twitter bg-[#F85559] rounded-full p-2"></i>
+                                    <i class="fa-brands fa-linkedin-in bg-[#F85559] rounded-full p-2"></i>
+                                </div>
+                            </div>
+                            <!-- 4rd grid  -->
+                            <div class="mx-auto">
+                                <img src="./images/member4.png" alt="">
+                                <h1 class="mt-2">Rafi Hossain</h1>
+                                <small>Fruits Expert</small>
+                                <div class=" mt-2">
+                                    <i class="fa-brands fa-facebook-f bg-[#F85559] rounded-full p-2"></i>
+                                    <i class="fa-brands fa-twitter bg-[#F85559] rounded-full p-2"></i>
+                                    <i class="fa-brands fa-linkedin-in bg-[#F85559] rounded-full p-2"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
+                </div>
+            </div>
+        </section>
+        <!-- why choose us section  -->
+        <section>
+            <!-- description  -->
         </section>
     </main>
     <footer>
