--- a/index.html
+++ b/index.html
@@ -447,6 +447,7 @@
         <!-- why choose us section  -->
         <section>
             <!-- description  -->
+            <h1>Why Choose Us</h1>
         </section>
     </main>
     <footer>
