--- a/index.html
+++ b/index.html
@@ -447,7 +447,109 @@
         <!-- why choose us section  -->
         <section>
             <!-- description  -->
-            <h1>Why Choose Us</h1>
+            <div class="text-center p-4 md:p-5 my-10">
+                <h1 class="text-4xl font-bold mb-4">Why Choose Us </h1>
+                <p>Stay cool with refreshing fruits.
+                    Nature’s candy, a bunch of joy.
+                    Small but mighty, packed with antioxidants. <br>
+                    Juicy, red, and bursting with goodness.
+                    Nature’s creamy green superfood.
+                    Juicy, red and bursting with goodness
+                    Crunch into a carrot for a <br> healthy bite
+                    Power up with green nutritious.</p>
+            </div>
+            <!-- banner  -->
+            <div class=" my-11 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 items-center">
+                <div class="order-2 md:order-1 lg:order-1 space-y-2 p-3">
+                    <!-- 1st  -->
+                    <div class="flex flex-col md:flex-row lg:flex-row gap-3 items-center text-center lg:text-left">
+                        <div class="bg-gray-200 p-2 rounded-full">
+                            <i class="fa-solid fa-users"></i>
+                        </div>
+                        <div class="p-3 space-y-3 ">
+                            <h1 class="text-2xl font-bold">Dedicated Team</h1>
+                            <hr class="w-1/3">
+                            <small>Professional employees are there for you to pick the most amazing and fresh
+                                fruits.</small>
+                        </div>
+                    </div>
+                    <!-- 2nd  -->
+                    <div class="flex flex-col md:flex-row lg:flex-row gap-3 items-center text-center lg:text-left">
+                        <div class="bg-gray-200 p-2 rounded-full">
+                            <i class="fa-solid fa-hand-holding-heart"></i>
+                        </div>
+                        <div class="p-3 space-y-3 ">
+                            <h1 class="text-2xl font-bold">Freshness is Best</h1>
+                            <hr class="w-1/3">
+                            <small>Professional employees are there for you to pick the most amazing and fresh
+                                fruits.</small>
+                        </div>
+                    </div>
+                    <!-- 3rd  -->
+                    <div class="flex flex-col md:flex-row lg:flex-row gap-3 items-center text-center lg:text-left">
+                        <div class="bg-gray-200 p-2 rounded-full">
+                            <i class="fa-solid fa-gift"></i>
+                        </div>
+                        <div class="p-3 space-y-3 ">
+                            <h1 class="text-2xl font-bold">Gift Certificates</h1>
+                            <hr class="w-1/3">
+                            <small>Professional employees are there for you to pick the most amazing and fresh
+                                fruits.</small>
+                        </div>
+                    </div>
+                </div>
+                <!-- middle section image  -->
+                <div class="order-1 md:order-2 lg:order-2">
+                    <img src="./images/whychoose1.png" alt="">
+                </div>
+                <div class="hidden md:order-3 md:flex lg:hidden">
+                    <img src="./images/whychoose1.png" alt="">
+                </div>
+                <!-- banner 3rd  -->
+                <div class="order-3 md:order-4 lg:order-3 space-y-2 p-3">
+                    <!-- 1st  -->
+                    <div
+                        class="flex flex-col-reverse md:flex-row lg:flex-row gap-3 items-center text-center lg:text-right">
+
+                        <div class="p-3 space-y-3 ">
+                            <h1 class="text-2xl font-bold">Integrated Supplier</h1>
+                            <hr class="w-1/3">
+                            <small>Professional employees are there for you to pick the most amazing and fresh
+                                fruits.</small>
+                        </div>
+                        <div class="bg-gray-200 p-2 rounded-full">
+                            <i class="fa-solid fa-plate-wheat"></i>
+                        </div>
+                    </div>
+                    <!-- 2nd  -->
+                    <div
+                        class="flex flex-col-reverse md:flex-row lg:flex-row gap-3 items-center text-center lg:text-right">
+                        <div class="p-3 space-y-3 ">
+                            <h1 class="text-2xl font-bold">Sustainable Practice</h1>
+                            <hr class="w-1/3">
+                            <small>Professional employees are there for you to pick the most amazing and fresh
+                                fruits.</small>
+                        </div>
+                        <div class="bg-gray-200 p-2 rounded-full">
+                            <i class="fa-solid fa-ice-cream"></i>
+                        </div>
+                    </div>
+                    <!-- 3rd  -->
+                    <div
+                        class="flex flex-col-reverse md:flex-row lg:flex-row gap-3 items-center text-center lg:text-right">
+                        <div class="p-3 space-y-3 ">
+                            <h1 class="text-2xl font-bold">The Benefits Only</h1>
+                            <hr class="w-1/3">
+                            <small>Professional employees are there for you to pick the most amazing and fresh
+                                fruits.</small>
+                        </div>
+                        <div class="bg-gray-200 p-2 rounded-full">
+                            <i class="fa-solid fa-handshake-angle"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </section>
     </main>
     <footer>
