--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </style>
 </head>
 
-<body class="garamond max-w-screen-xl mx-auto px-8 md:px-16 lg:px-24">
+<body class="garamond ">
 
-    <header class="mb-14">
+    <header class="max-w-screen-xl mx-auto px-8 md:px-16 lg:px-24 mb-14">
         <nav class="my-9 ">
             <div
                 class="navbar flex justify-between md:justify-around lg:justify-around md:text-white  lg:text-white p-4 rounded-full  bg-transparent md:bg-[#F85559] lg:bg-[#F85559]">
@@ -152,7 +152,7 @@
             </div>
         </div>
     </header>
-    <main>
+    <main class="max-w-screen-xl mx-auto px-8 md:px-16 lg:px-24 ">
         <!-- deal of the day section  -->
         <section class="flex flex-col md:flex-col lg:flex-row my-10 gap-3    justify-center ">
             <div class="flex-1 text-center md:text-center lg:text-left">
@@ -552,9 +552,32 @@
 
         </section>
     </main>
-    <footer>
-
+    <!-- footer  -->
+    <footer class="footer footer-center  p-10 bg-black text-white">
+        <div class=" flex gap-1">
+            <img src="./images/logo.png" alt="">
+            <h1 class="text-3xl">Fruit Blust Saga</h1>
+        </div>
+        <div class="flex justify-center flex-wrap list-none gap-5">
+            <li>Home</li>
+            <li>About Us</li>
+            <li>Shop</li>
+            <li>All Products</li>
+            <li>Support</li>
+            <li>Our Accounts</li>
+        </div>
+        <div>
+            <div class="grid grid-flow-col gap-4">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-square-instagram"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-linkedin"></i>
+                <i class="fa-brands fa-youtube"></i>
+                <i class="fa-brands fa-apple"></i>
+            </div>
+        </div>
     </footer>
+
 
 </body>
 
